[package]
name = "camera_proc"
version = "0.1.0"
edition = "2018"

[dependencies]
asdf-pixel-sort = "0.0.1"
eframe = "0.14.0"
env_logger = "0.9.0"
flume = "0.10.9"
glium = "0.30.1"
glutin = "0.27.0"
image = { version = "0.23.14", default-features = false }
log = "0.4.14"
nokhwa = { version = "0.3.2", features = ["input-v4l"] }
