[package]
name = "camera_proc"
version = "0.1.0"
edition = "2018"
resolver = "2"

[dependencies]
asdf-pixel-sort = "0.2.0"
eframe = "0.14.0"
env_logger = "0.9.0"
flume = "0.10.9"
glium = "0.30.2"
glutin = "0.27.0"
image = { version = "0.23.14", default-features = false }
log = "0.4.17"
once_cell = "1.13.0"

[target.'cfg(not(target_os = "macos"))'.dependencies]
nokhwa = { version = "0.3.2", features = ["input-v4l"] }

[target.'cfg(target_os = "macos")'.dependencies]
nokhwa = { version = "0.3.2", features = ["input-uvc"] }
